# shuttle-cch23-axum

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
day1/: Cargo.toml
day1/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/: Cargo.toml
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs
day5/: Cargo.toml
day5/src/: lib.rs
day6/: Cargo.toml
day6/src/: lib.rs
day7/: Cargo.toml
day7/src/: lib.rs
day8/: Cargo.toml
day8/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
errors/: Cargo.toml
errors/src/: lib.rs
minus1/: Cargo.toml
minus1/src/: lib.rs
server/: Cargo.toml
server/src/lib/: application.rs  lib.rs  schema.sql
server/tests/api/: main.rs
utilities/src/: parser.rs
