[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[lib]
name = "day11_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.0"
domain = { path = "../domain" }
errors = { path = "../errors" }
