[package]
name = "day13"
version = "13.1.0"
edition = "2021"

[lib]
name = "day13_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
domain = { path = "../domain" }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-native-tls", "postgres" ] }
