[package]
name = "day5"
version = "0.1.0"
edition = "2021"

[lib]
name = "day5_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = [ "query", "json" ] }
axum-macros = "0.4.0"
domain = { path = "../domain" }
