[package]
name = "day8"
version = "8.1.0"
edition = "2021"

[lib]
name = "day8_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.0"
domain = { path = "../domain" }
reqwest = { version = "0.11.22", features = [ "json" ] }
serde_json = "1.0.108"
