[package]
name = "domain"
version = "13.1.0"
edition = "2021"

[lib]
name = "domain"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
errors = { path = "../errors" }
serde = { version = "1.0.193", features = [ "derive" ] }
shuttle-persist = "0.39.0"
sqlx = { version = "0.7.3", features = [ "postgres" ] }

