[package]
name = "shuttle-cch23-axum"
version = "12.1.0"
edition = "2021"

[[bin]]
name = "shuttle-cch23-axum"
path = "src/bin/httpd.rs"

[lib]
name = "shuttle_cch23_axum"
path = "src/lib/lib.rs" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minus1 = { path = "../minus1" }
day12 = { path = "../day12" }
day13 = { path = "../day13" }
domain = { path = "../domain" }
axum = "0.7.2"
shuttle-axum = { version = "0.35.1", default-features = false, features = [ "axum-0-7"] }
shuttle-persist = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = [ "postgres" ] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-native-tls", "postgres" ] }
tokio = { version = "1.35.1", features = [ "full" ] }

[dev-dependencies]

