[package]
name = "shuttle-cch23-axum"
version = "13.1.0"
edition = "2021"

[[bin]]
name = "shuttle-cch23-axum"
path = "src/bin/httpd.rs"

[lib]
name = "shuttle_cch23_axum"
path = "src/lib/lib.rs" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minus1 = { path = "../minus1" }
day1 = { path = "../day1" }
day4 = { path = "../day4" }
day5 = { path = "../day5" }
day6 = { path = "../day6" }
day7 = { path = "../day7" }
day11 = { path = "../day11" }
day12 = { path = "../day12" }
day13 = { path = "../day13" }
domain = { path = "../domain" }
errors = { path = "../errors" }
axum = "0.7.3"
shuttle-axum = "0.36.0"
shuttle-persist = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-shared-db = { version = "0.36.0", features = [ "postgres" ] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-native-tls", "postgres" ] }
tokio = { version = "1.35.1", features = [ "full" ] }

[dev-dependencies]

